# ml-grafwiedzy

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: run_graph.py  scrapper.py
scripts/scrapper/: __init__.py  main.py  scrapper.py  wit_scrapper.py
src/topwr_ml/: config.py
src/topwr_ml/api/: add.py
src/topwr_ml/chatbot/: main.py  rag.py
src/topwr_ml/graph/: connection.py  loader.py  queries.py
src/topwr_ml/pipe/: __init__.py  llm_pipe.py  main.py  pdf_loader.py  pipe.py
tests/: test_connection.py  test_queries.py
