[tool.poetry]
name = "topwr-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py2neo = "^2021.2.4"
python-dotenv = "^1.1.0"
langchain-openai = "^0.3.14"
langchain-core = "^0.3.55"
langgraph = "^0.3.32"
langchain-neo4j = "^0.4.0"
numpy = "^2.2.5"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88  # Można dostosować