[tool.poetry]
name = "topwr-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.23"
langchain-openai = "^0.3.12"
langgraph = "^0.3.28"
langchain-neo4j = "^0.4.0"
numpy = "^2.2.4"
dotenv = "^0.9.9"
py2neo = "^2021.2.4"
python-dotenv = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88  # Można dostosować

[tool.poetry.group.scrapper.dependencies]
beautifulsoup4 = "^4.12.0"  
requests = "^2.31.0"       
selenium = "^4.18.0"        

[tool.poetry.scripts]
scrapper = "scripts.scrapper.main:main"  
[tool.poetry.scripts]
rag = "src.topwr_ml.chatbot.main:main"
